story(ccls-2021): updates following review